==> china-djyos/djyos/bsp/cpudrv/imxrt/1050/src/uart/cpu_peri_uart.c <==
#include "stdint.h"
#include "stdio.h"
#include "string.h"
#include "errno.h"
#include "systime.h"
#include "cpu_peri.h"
#include "cpu_peri_int_line.h"
#include <device/djy_uart.h>
#include "device.h"
#include "int.h"
#include "djyos.h"
#include "stdlib.h"
#include "cpu_peri_uart.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_UART    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_UART1_SENDBUF_LEN    64             //"UART1发送缓冲大小",
#define CFG_UART1_RECVBUF_LEN    64             //"UART1接收缓冲大小",
#define CFG_UART2_SENDBUF_LEN    64             //"UART2发送缓冲大小",
#define CFG_UART2_RECVBUF_LEN    64             //"UART2接收缓冲大小",
#define CFG_UART3_SENDBUF_LEN    64             //"UART3发送缓冲大小",
#define CFG_UART3_RECVBUF_LEN    64             //"UART3接收缓冲大小",
#define CFG_UART4_SENDBUF_LEN    64             //"UART4发送缓冲大小",
#define CFG_UART4_RECVBUF_LEN    64             //"UART4接收缓冲大小",
#define CFG_UART5_SENDBUF_LEN    64             //"UART5发送缓冲大小",
#define CFG_UART5_RECVBUF_LEN    64             //"UART5接收缓冲大小",
#define CFG_UART6_SENDBUF_LEN    64             //"UART6发送缓冲大小",
#define CFG_UART6_RECVBUF_LEN    64             //"UART6接收缓冲大小",
#define CFG_UART7_SENDBUF_LEN    64             //"UART7发送缓冲大小",
#define CFG_UART7_RECVBUF_LEN    64             //"UART7接收缓冲大小",
#define CFG_UART8_SENDBUF_LEN    64             //"UART8发送缓冲大小",
#define CFG_UART8_RECVBUF_LEN    64             //"UART8接收缓冲大小",

void __UART_RxIntEnable(u8 flag,u8 port)
{
    if(flag == CN_DMA_USED){}
    else
        LPUART_EnableInterrupts((tagUartReg *)tg_UART_Reg[port], \
                kLPUART_RxDataRegFullInterruptEnable);
}

void __UART_RxIntDisable(u8 flag, u8 port)
{
    if(flag == CN_DMA_USED){}
    else
        LPUART_DisableInterrupts((tagUartReg *)tg_UART_Reg[port], \
                kLPUART_RxDataRegFullInterruptEnable);
}

static void __UART_TxIntEnable(u8 flag,u8 port,u8 int_flag)
{
    if(flag == CN_DMA_USED){}
    else
    {
        if(int_flag==CN_UART_TX_RMPTY)
            LPUART_EnableInterrupts((tagUartReg *)tg_UART_Reg[port], \
                    kLPUART_TxDataRegEmptyInterruptEnable);
        else if(int_flag==CN_UART_TX_COMPLETE)
            LPUART_EnableInterrupts((LPUART_Type *)tg_UART_Reg[port], \
                    kLPUART_TransmissionCompleteInterruptEnable);
    }
}

static void __UART_TxIntDisable(u8 flag, u8 port,u8 int_flag)
{
    if(flag == CN_DMA_USED){}
    else
    {
        if(int_flag==CN_UART_TX_RMPTY)
            LPUART_DisableInterrupts((tagUartReg *)tg_UART_Reg[port], \
                    kLPUART_TxDataRegEmptyInterruptEnable);
        else if(int_flag==CN_UART_TX_COMPLETE)
            LPUART_DisableInterrupts((tagUartReg *)tg_UART_Reg[port], \
                    kLPUART_TransmissionCompleteInterruptEnable);
    }
}

static void __UART_BaudSet(u8 port,u32 baud)
{
    tg_UART_Config[port].baudRate_Bps = baud;
    LPUART_SetBaudRate((tagUartReg *)tg_UART_Reg[port], baud, \
            SRC_FREQ);
    if(TxDirectPort == port)
    {
        TxByteTime = 11000000/baud;     //1个字节传输时间，按10bit，+10%计算
    }
}

static void __UART_ComConfig(tagUartReg volatile * reg,u8 port,struct COMParam *COM)
{
    struct COMParam *COM;

    if(tg_UART_Reg[port]!=reg)
        return;
    if(COM == NULL)
        return;

     LPUART_GetDefaultConfig(&tg_UART_Config[port]);
     tg_UART_Config[port].baudRate_Bps = COM->BaudRate;
     switch(COM->DataBits)               // data bits
     {
         case CN_UART_DATABITS_7:    tg_UART_Config[port].dataBitsCount = kLPUART_SevenDataBits;
                                     break;
         case CN_UART_DATABITS_8:    tg_UART_Config[port].dataBitsCount = kLPUART_EightDataBits;
                                     break;
         default:break;
     }

     switch(COM->Parity)                 // parity
     {
         case CN_UART_PARITY_ODD:    tg_UART_Config[port].parityMode = kLPUART_ParityOdd;
                                     break;
         case CN_UART_PARITY_EVEN:   tg_UART_Config[port].parityMode = kLPUART_ParityEven;
                                     break;
         default:break;
     }

     switch(COM->StopBits)               // stop bits
     {
         case CN_UART_STOPBITS_1:    tg_UART_Config[port].stopBitCount = kLPUART_OneStopBit;
                                     break;
         case CN_UART_STOPBITS_2:    tg_UART_Config[port].stopBitCount = kLPUART_TwoStopBit;
                                     break;
         default:break;
     }
}

void __UART_Enable(u8 port)
{
    tg_UART_Config[port].enableTx = true;
    tg_UART_Config[port].enableRx = true;

    LPUART_Init((tagUartReg *)tg_UART_Reg[port], \
                 &tg_UART_Config[port], SRC_FREQ);
}

void __UART_Disable(u8 port)
{
    tg_UART_Config[port].enableTx = false;
    tg_UART_Config[port].enableRx = false;

    LPUART_Deinit((tagUartReg *)tg_UART_Reg[port]);
}

static void __UART_IntInit(u8 port)
{
    u8 IntLine;
    if(port == CN_UART1)
        IntLine = CN_INT_LINE_LPUART1;
    else if(port == CN_UART2)
        IntLine = CN_INT_LINE_LRUART2;
    else if(port == CN_UART3)
        IntLine = CN_INT_LINE_LRUART3;
    else if(port == CN_UART4)
        IntLine = CN_INT_LINE_LRUART4;
    else if(port == CN_UART5)
        IntLine = CN_INT_LINE_LPUART5;
    else if(port == CN_UART6)
        IntLine = CN_INT_LINE_LPUART6;
    else if(port == CN_UART7)
        IntLine = CN_INT_LINE_LPUART7;
    else if(port == CN_UART8)
        IntLine = CN_INT_LINE_LPUART8;
    else
        return;

    Int_Register(IntLine);
    Int_SetClearType(IntLine,CN_INT_CLEAR_AUTO);
    Int_IsrConnect(IntLine,UART_ISR);
    Int_SettoAsynSignal(IntLine);
    Int_ClearLine(IntLine);
    Int_RestoreAsynLine(IntLine);
    Int_SetIsrPara(IntLine,port);
}

static void __UART_HardInit(u8 port)
{
    if(port > CN_UART8)
        return;
    //系统初始化时已经使中断处于禁止状态，无需再禁止和清除中断。
   //初始化uart硬件控制数据结构
   LPUART_GetDefaultConfig(&tg_UART_Config[port]);
   tg_UART_Config[port].baudRate_Bps = 115200;
   //tg_UART_Config[port].enableTx = true;
   //tg_UART_Config[port].enableRx = true;
   //LPUART_Init(tg_UART_Reg[port], &tg_UART_Config[port],
    //     SRC_FREQ);
}

static ptu32_t __UART_Ctrl(tagUartReg *reg,u32 cmd, va_list *arg0)
{
    u8 port=0;
    ptu32_t result = 0;

    if(reg == NULL)
        return 0;

    switch((u32)reg)
    {
        case CN_UART1_BASE: port = CN_UART1;break;
        case CN_UART2_BASE: port = CN_UART2;break;
        case CN_UART3_BASE: port = CN_UART3;break;
        case CN_UART4_BASE: port = CN_UART4;break;
        case CN_UART5_BASE: port = CN_UART5;break;
        case CN_UART6_BASE: port = CN_UART6;break;
        case CN_UART7_BASE: port = CN_UART7;break;
        case CN_UART8_BASE: port = CN_UART8;break;
        default:return 0;
    }

    switch(cmd)
    {
        case CN_DEV_CTRL_START:
            __UART_Enable(port);
            __UART_RxIntEnable(CN_DMA_UNUSED,port);
            break;
        case CN_DEV_CTRL_STOP:
            __UART_RxIntDisable(CN_DMA_UNUSED,port);
            __UART_Disable(port);
            break;
        case CN_UART_SET_BAUD:  //设置Baud
        {
            u32 data;
            data = va_arg(*arg0, u32);
            __UART_BaudSet(port, data);
        }
            break;
        case CN_UART_EN_RTS:
            tg_UART_Config[port].enableRxRTS = true;
            reg->MODIR |= LPUART_MODIR_RXRTSE_MASK;
            break;
        case CN_UART_DIS_RTS:
            tg_UART_Config[port].enableRxRTS = false;
            reg->MODIR &= ~LPUART_MODIR_RXRTSE_MASK;
            break;
        case CN_UART_EN_CTS:
            tg_UART_Config[port].enableTxCTS = true;
            reg->MODIR |= LPUART_MODIR_TXCTSE_MASK;
            break;
        case CN_UART_DIS_CTS:
            tg_UART_Config[port].enableTxCTS = false;
            reg->MODIR &= ~LPUART_MODIR_TXCTSE_MASK;
            break;
/*
        case CN_UART_DMA_USED:
            __UART_SetDmaUsed(port);
            break;
        case CN_UART_DMA_UNUSED:
            __UART_SetDmaUnUsed(port);
            break;
*/
        case CN_UART_COM_SET:
        {
            struct COMParam *COM;
            COM = va_arg(*arg0, void *);
            __UART_ComConfig(Reg,port,COM);
        }
            break;
        default: break;
    }
    return result;
}

u32 UART_ISR(ptu32_t port)
{
    struct UartGeneralCB *UCB;
    u32 num;
    u8 ch;

    UCB = pUartCB[port];
    if ((kLPUART_RxDataRegFullFlag)&    \
            LPUART_GetStatusFlags((tagUartReg *)tg_UART_Reg[port]))//接收中断
    {
        ch = LPUART_ReadByte((tagUartReg *)tg_UART_Reg[port]);
        num = UART_PortWrite(UCB,&ch,1);
        if(num != 1)
        {
            UART_ErrHandle(UCB,CN_UART_BUF_OVER_ERR);
        }
    }
    if((kLPUART_NoiseErrorFlag|kLPUART_FramingErrorFlag|kLPUART_ParityErrorFlag) &  \
            LPUART_GetStatusFlags((tagUartReg *)tg_UART_Reg[port])) /*发生错误*/
    {
        Board_UartHalfDuplexRecv(port);
    }
    if((kLPUART_TxDataRegEmptyFlag)&
            LPUART_GetStatusFlags((tagUartReg *)tg_UART_Reg[port]))
    {
        num = UART_PortRead(UCB,&ch,1);
        if(num != 0)
            LPUART_WriteByte((tagUartReg *)tg_UART_Reg[port], ch);
        else
        {
            LPUART_DisableInterrupts((tagUartReg *)tg_UART_Reg[port], \
                        kLPUART_TxDataRegEmptyInterruptEnable);
        }
        LPUART_ClearStatusFlags((tagUartReg *)tg_UART_Reg[port], \
                kLPUART_TxDataRegEmptyInterruptEnable);
    }
    if((kLPUART_TxFifoOverflowFlag|kLPUART_RxFifoUnderflowFlag)&    \
            LPUART_GetStatusFlags((tagUartReg *)tg_UART_Reg[port])) //ORE过载错误
    {
        UART_ErrHandle(UCB,CN_UART_FIFO_OVER_ERR);
    }
    return 0;
}

s32 Uart_PutStrDirect(const char *str,u32 len)
{
    u32 result = 0;
    s32 timeout = TxByteTime * len;
    u32 CR_Bak;
    u8 port;
    for(port=0;port<CN_UART_NUM;port++)
    {
        if(PutStrDirectReg ==tg_UART_Reg[port])
            break;
    }
    Board_UartHalfDuplexSend(port);
    CR_Bak = LPUART_GetEnabledInterrupts(PutStrDirectReg);                      //Save INT
    LPUART_DisableInterrupts(PutStrDirectReg,\
        (kLPUART_TxDataRegEmptyInterruptEnable|kLPUART_TransmissionCompleteInterruptEnable));//disable send INT
    for(result=0; result < len+1; result ++)
    {
        // 超时或者发送缓冲为空时退出
        while((false == __UART_TxTranEmpty(PutStrDirectReg))&& (timeout > 10))
        {
            timeout -=10;
            DJY_DelayUs(10);
        }
        if( (timeout <= 10) || (result == len))
            break;
        PutStrDirectReg->DATA = *(u8*)(str+result);
    }
    LPUART_EnableInterrupts(PutStrDirectReg,CR_Bak); //restore send INT
    while(!__UART_TxTranComplete(PutStrDirectReg))
    {
        timeout -=10;
        DJY_DelayUs(10);
        if(timeout < 10)
           break;
    }
    Board_UartHalfDuplexRecv(port);
    return result;
}

char Uart_GetCharDirect(void)
{
    u16 CR_Bak;
    char result;

    CR_Bak = LPUART_GetEnabledInterrupts(GetCharDirectReg);               //Save INT
    LPUART_DisableInterrupts(GetCharDirectReg,\
            (kLPUART_TxDataRegEmptyInterruptEnable|kLPUART_TransmissionCompleteInterruptEnable));//disable send INT
    while(__UART_RxHadChar(GetCharDirectReg) == false)
    {
        DJY_EventDelay(5*mS);
    }
    result=LPUART_ReadByte(GetCharDirectReg);
    LPUART_EnableInterrupts(GetCharDirectReg,CR_Bak); //restore send INT
    return result;
}
